# ft_malcolm

./: CMakeLists.txt  Makefile  ft_malcolm
includes/: ft_spoof.h  ft_status.h  malcolm_validator.h  parser.h
libft/: Makefile  ft_atoi.c  ft_atoi_base.c  ft_itoa.c  ft_split.c  ft_strjoin.c  ft_strlen.c  libft.h
src/: main.c  malcolm_validator.c  parser.c
